--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,24 +6,20 @@ services:
     build: #image war nicht genug, da mysqli nicht automatisch installiert deswegen Dockerfile erstellt
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - "./:/var/www/html" #sznc project dir with container web dir
     ports:
-      - 8080:80
-      - 443:443 #future ssl traffic
-    networks:
-      - lamp-docker
+      - 5000:5000
   db:
     image: mysql:latest
+    container_name: db
+    ports:
+      - 3306:3306
     environment:
-      - MYSQL_DATABASE=php_docker
-      - MYSQL_USER=user #Username
-      - MYSQL_PASSWORD=test #password
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+      - MYSQL_DATABASE="php_docker"
+      - MYSQL_USER="user" #Username
+      - MYSQL_PASSWORD="test" #password
+      - MYSQL_ROOT_PASSWORD="test"
     volumes:
       - "./db:/docker-entrypoint-initdb.d" #speichern der Einträge
-    networks:
-      - lamp-docker
   phpmyadmin:
     depends_on:
       - db
@@ -33,8 +29,3 @@ services:
     environment:
       - PMA_HOST=db
       - PMA_PORT=3306
-    networks:
-      - lamp-docker
-networks:
-  lamp-docker:
-    driver: bridge
