--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,17 @@
-version: '3'
+version: "2"
 services:
-  www:
-    depends_on:
+  app:
+    build: ./app
+    links:
       - db
-    build: #image war nicht genug, da mysqli nicht automatisch installiert deswegen Dockerfile erstellt
-      context: .
-      dockerfile: Dockerfile
     ports:
-      - 5000:5000
+      - "5000:5000"
+
   db:
-    image: mysql:latest
-    container_name: db
+    image: mysql:5.7
     ports:
-      - 3306:3306
+      - "32000:3306"
     environment:
-      - MYSQL_DATABASE="php_docker"
-      - MYSQL_USER="user" #Username
-      - MYSQL_PASSWORD="test" #password
-      - MYSQL_ROOT_PASSWORD="test"
+      MYSQL_ROOT_PASSWORD: root
     volumes:
-      - "./db:/docker-entrypoint-initdb.d" #speichern der Einträge
-  phpmyadmin:
-    depends_on:
-      - db
-    image: phpmyadmin/phpmyadmin
-    ports:
-      - 9001:80 #:9001 myphp login page aufrufbar
-    environment:
-      - PMA_HOST=db
-      - PMA_PORT=3306
+      - ./db:/docker-entrypoint-initdb.d/:ro
