--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
 version: "3"
 services:
-  app:
-    build: ./app
-    depends_on:
-      - db
-    links:
-      - db
+  httpsapp:
+    build:
+      context: ./app
+      dockerfile: Dockerfile_With_Cert
+    ports:
+      - "5001:5001"
+    volumes:
+      - ./CA/certificate.pem:/app/certificate.pem
+      - ./CA/private_key.pem:/app/private_key.pem
+
+  httpapp:
+    build:
+      context: ./app
     ports:
       - "5000:5000"
-
   db:
     image: mysql:5.7
     ports:
