--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,9 @@ services:
     volumes:
       - ./CA/certificate.pem:/app/certificate.pem
       - ./CA/private_key.pem:/app/private_key.pem
-
   httpapp:
     build:
-      context: ./app
+      context: ./app  
     ports:
       - "5000:5000"
   db:
@@ -23,3 +22,15 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - ./db:/docker-entrypoint-initdb.d/:ro
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    links:
+      - db
+    environment:
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    restart: always
+    ports:
+      - 8081:80
