--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,9 @@ services:
   httpapp:
     build:
       context: ./app  
+      dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "80:80"
   db:
     image: mysql:5.7
     ports:
